// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flag OFF: the BASE menu fresh, daily off: no gallery control, tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 14,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <View
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            height="100%"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width="100%"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M242.35 233.22 147.3 395.98 120.22 349.48 120.33 344.18 256.05 117.05Z M255.42 165.12 248.82 221.08 242.56 231.42 255.32 123.28Z M196.08 314.17 199.65 316.25 175.27 358 151.4 388.95 194.59 315.01Z M220.46 270.7 226.21 260.85 230.5 263.43 224.35 273.97 221.36 272.22Z"
                fill={
                  {
                    "payload": 4285286885,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M148.44 394.01 195.33 313.73 221.82 298.85Z M161.04 385.87 149.65 392.45 220.57 300.48 222.46 299.34 225.78 301.9Z"
                fill={
                  {
                    "payload": 4290389097,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M148.44 394.01 221.82 298.85 233.55 291.8 255.75 332Z M236.74 289.93 260.06 329.46 256.49 331.56 254.97 330.68 232.43 292.47Z"
                fill={
                  {
                    "payload": 4293278847,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M243.85 258.6 263.9 224.85 256.27 210.2 256.05 117.05 320.8 225.22 285.23 282.93Z M256.07 123.33 256.27 208.76 255.4 210.2 251.28 210.21 251.17 164.87Z M282.07 286.87 241.9 263.26 244.5 258.98 284.58 282.54Z M292.52 271.09 319.49 227.36 315.39 243.53 296.33 274.44 293.46 272.67Z"
                fill={
                  {
                    "payload": 4293278847,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M243.85 258.6 285.23 282.93 279.32 293.07 237.45 269.15Z M235.96 271.66 238.53 267.37 263.98 282.65 279.85 292.17 277.28 296.46Z"
                fill={
                  {
                    "payload": 4290389097,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M256.27 210.2 242.35 233.22 256.05 117.05Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M320.8 225.22 390.6 342 393.32 346.6 364.95 395.23 307.07 296.93 303.95 291.73Z M300.59 284.63 311.43 241.85 320.19 227.65 304.21 290.7Z M355.37 388.81 313.32 317.39 316.9 315.29 318.43 316.21 364.18 393.91Z"
                fill={
                  {
                    "payload": 4285286885,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M320.8 225.22 303.95 291.73 292.08 271.81Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M226.59 260.2 317.63 314.86 364.95 395.23 255.75 332 220.03 271.44Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      1
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 32,
          "color": "#6D6988",
        },
      ]
    }
  />
</View>
`;

exports[`flag OFF: the BASE menu solved, daily available: no gallery control, tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 14,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "alignItems": "center",
        },
        {
          "paddingBottom": 97,
          "paddingTop": 58,
        },
      ]
    }
    testID="menu-column"
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginBottom": 56,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 51.52,
              "justifyContent": "center",
              "width": 51.52,
            }
          }
        >
          <View
            style={
              {
                "height": 80.5,
                "marginTop": -2.24,
                "width": 80.5,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={512}
              vbWidth={512}
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M242.35 233.22 147.3 395.98 120.22 349.48 120.33 344.18 256.05 117.05Z M255.42 165.12 248.82 221.08 242.56 231.42 255.32 123.28Z M196.08 314.17 199.65 316.25 175.27 358 151.4 388.95 194.59 315.01Z M220.46 270.7 226.21 260.85 230.5 263.43 224.35 273.97 221.36 272.22Z"
                  fill={
                    {
                      "payload": 4285286885,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M148.44 394.01 195.33 313.73 221.82 298.85Z M161.04 385.87 149.65 392.45 220.57 300.48 222.46 299.34 225.78 301.9Z"
                  fill={
                    {
                      "payload": 4290389097,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M148.44 394.01 221.82 298.85 233.55 291.8 255.75 332Z M236.74 289.93 260.06 329.46 256.49 331.56 254.97 330.68 232.43 292.47Z"
                  fill={
                    {
                      "payload": 4293278847,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M243.85 258.6 263.9 224.85 256.27 210.2 256.05 117.05 320.8 225.22 285.23 282.93Z M256.07 123.33 256.27 208.76 255.4 210.2 251.28 210.21 251.17 164.87Z M282.07 286.87 241.9 263.26 244.5 258.98 284.58 282.54Z M292.52 271.09 319.49 227.36 315.39 243.53 296.33 274.44 293.46 272.67Z"
                  fill={
                    {
                      "payload": 4293278847,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M243.85 258.6 285.23 282.93 279.32 293.07 237.45 269.15Z M235.96 271.66 238.53 267.37 263.98 282.65 279.85 292.17 277.28 296.46Z"
                  fill={
                    {
                      "payload": 4290389097,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M256.27 210.2 242.35 233.22 256.05 117.05Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M320.8 225.22 390.6 342 393.32 346.6 364.95 395.23 307.07 296.93 303.95 291.73Z M300.59 284.63 311.43 241.85 320.19 227.65 304.21 290.7Z M355.37 388.81 313.32 317.39 316.9 315.29 318.43 316.21 364.18 393.91Z"
                  fill={
                    {
                      "payload": 4285286885,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M320.8 225.22 303.95 291.73 292.08 271.81Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M226.59 260.2 317.63 314.86 364.95 395.23 255.75 332 220.03 271.44Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#191724",
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 56,
              "includeFontPadding": false,
              "letterSpacing": 0.56,
              "marginLeft": 2.24,
            }
          }
        >
          rrows
        </Text>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 24,
              "letterSpacing": 0.5,
              "marginTop": 30,
            },
            {
              "color": "#8F76F0",
            },
          ]
        }
      >
        Level 
        1
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_600SemiBold",
              "fontSize": 15,
              "letterSpacing": 0.5,
              "marginTop": 6,
            },
            {
              "color": "#6D6988",
            },
          ]
        }
      >
        Normal
      </Text>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 34,
              "height": 68,
              "justifyContent": "center",
              "width": 250,
            },
            {
              "backgroundColor": "#6D4AEF",
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fredoka_700Bold",
                "fontSize": 22,
                "letterSpacing": 1,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          Play
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
      testID="menu-entry-row"
    >
      <View
        accessibilityLabel="Today's board"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 4,
              "minHeight": 44,
              "minWidth": 44,
              "paddingHorizontal": 16,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fredoka_600SemiBold",
                "fontSize": 15,
                "letterSpacing": 0.5,
              },
              {
                "color": "#6D6988",
              },
            ]
          }
        >
          Today's board
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "left": 18,
          "right": 18,
          "textAlign": "center",
        },
        {
          "bottom": 32,
          "color": "#6D6988",
        },
      ]
    }
  >
    3 puzzles solved
  </Text>
</View>
`;

exports[`flag OFF: the BASE menu solved, daily done: no gallery control, tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 14,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "alignItems": "center",
        },
        {
          "paddingBottom": 97,
          "paddingTop": 58,
        },
      ]
    }
    testID="menu-column"
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginBottom": 56,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "height": 51.52,
              "justifyContent": "center",
              "width": 51.52,
            }
          }
        >
          <View
            style={
              {
                "height": 80.5,
                "marginTop": -2.24,
                "width": 80.5,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="100%"
              bbWidth="100%"
              focusable={false}
              height="100%"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": "100%",
                    "width": "100%",
                  },
                ]
              }
              vbHeight={512}
              vbWidth={512}
              width="100%"
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M242.35 233.22 147.3 395.98 120.22 349.48 120.33 344.18 256.05 117.05Z M255.42 165.12 248.82 221.08 242.56 231.42 255.32 123.28Z M196.08 314.17 199.65 316.25 175.27 358 151.4 388.95 194.59 315.01Z M220.46 270.7 226.21 260.85 230.5 263.43 224.35 273.97 221.36 272.22Z"
                  fill={
                    {
                      "payload": 4285286885,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M148.44 394.01 195.33 313.73 221.82 298.85Z M161.04 385.87 149.65 392.45 220.57 300.48 222.46 299.34 225.78 301.9Z"
                  fill={
                    {
                      "payload": 4290389097,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M148.44 394.01 221.82 298.85 233.55 291.8 255.75 332Z M236.74 289.93 260.06 329.46 256.49 331.56 254.97 330.68 232.43 292.47Z"
                  fill={
                    {
                      "payload": 4293278847,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M243.85 258.6 263.9 224.85 256.27 210.2 256.05 117.05 320.8 225.22 285.23 282.93Z M256.07 123.33 256.27 208.76 255.4 210.2 251.28 210.21 251.17 164.87Z M282.07 286.87 241.9 263.26 244.5 258.98 284.58 282.54Z M292.52 271.09 319.49 227.36 315.39 243.53 296.33 274.44 293.46 272.67Z"
                  fill={
                    {
                      "payload": 4293278847,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M243.85 258.6 285.23 282.93 279.32 293.07 237.45 269.15Z M235.96 271.66 238.53 267.37 263.98 282.65 279.85 292.17 277.28 296.46Z"
                  fill={
                    {
                      "payload": 4290389097,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M256.27 210.2 242.35 233.22 256.05 117.05Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M320.8 225.22 390.6 342 393.32 346.6 364.95 395.23 307.07 296.93 303.95 291.73Z M300.59 284.63 311.43 241.85 320.19 227.65 304.21 290.7Z M355.37 388.81 313.32 317.39 316.9 315.29 318.43 316.21 364.18 393.91Z"
                  fill={
                    {
                      "payload": 4285286885,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M320.8 225.22 303.95 291.73 292.08 271.81Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M226.59 260.2 317.63 314.86 364.95 395.23 255.75 332 220.03 271.44Z"
                  fill={
                    {
                      "payload": 4283510978,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
        <Text
          style={
            {
              "color": "#191724",
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 56,
              "includeFontPadding": false,
              "letterSpacing": 0.56,
              "marginLeft": 2.24,
            }
          }
        >
          rrows
        </Text>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 24,
              "letterSpacing": 0.5,
              "marginTop": 30,
            },
            {
              "color": "#8F76F0",
            },
          ]
        }
      >
        Level 
        1
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_600SemiBold",
              "fontSize": 15,
              "letterSpacing": 0.5,
              "marginTop": 6,
            },
            {
              "color": "#6D6988",
            },
          ]
        }
      >
        Normal
      </Text>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 34,
              "height": 68,
              "justifyContent": "center",
              "width": 250,
            },
            {
              "backgroundColor": "#6D4AEF",
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fredoka_700Bold",
                "fontSize": 22,
                "letterSpacing": 1,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          Play
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
      testID="menu-entry-row"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 4,
              "minHeight": 44,
              "minWidth": 44,
              "paddingHorizontal": 16,
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Fredoka_600SemiBold",
                "fontSize": 15,
                "letterSpacing": 0.5,
              },
              {
                "color": "#6D6988",
              },
            ]
          }
        >
          Today's board · done
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "left": 18,
          "right": 18,
          "textAlign": "center",
        },
        {
          "bottom": 32,
          "color": "#6D6988",
        },
      ]
    }
  >
    3 puzzles solved
  </Text>
</View>
`;

exports[`flag OFF: the BASE menu solved, daily off: no gallery control, tree identical to BASE 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row-reverse",
          "gap": 12,
          "position": "absolute",
          "right": 18,
        },
        {
          "top": 14,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Dark mode"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": false,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ☾
      </Text>
    </View>
    <View
      accessibilityLabel="Sound"
      accessibilityRole="switch"
      accessibilityState={
        {
          "busy": undefined,
          "checked": true,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#EFEDF8",
          "borderColor": "#8E80C5",
          "borderRadius": 14.666666666666666,
          "borderWidth": 1,
          "height": 44,
          "justifyContent": "center",
          "transform": [
            {
              "scale": 1,
            },
          ],
          "width": 44,
        }
      }
    >
      <Text
        style={
          {
            "color": "#4A3E8C",
            "fontSize": 19.36,
            "opacity": 1,
          }
        }
      >
        ♪
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "marginBottom": 56,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "height": 51.52,
            "justifyContent": "center",
            "width": 51.52,
          }
        }
      >
        <View
          style={
            {
              "height": 80.5,
              "marginTop": -2.24,
              "width": 80.5,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            height="100%"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width="100%"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M242.35 233.22 147.3 395.98 120.22 349.48 120.33 344.18 256.05 117.05Z M255.42 165.12 248.82 221.08 242.56 231.42 255.32 123.28Z M196.08 314.17 199.65 316.25 175.27 358 151.4 388.95 194.59 315.01Z M220.46 270.7 226.21 260.85 230.5 263.43 224.35 273.97 221.36 272.22Z"
                fill={
                  {
                    "payload": 4285286885,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M148.44 394.01 195.33 313.73 221.82 298.85Z M161.04 385.87 149.65 392.45 220.57 300.48 222.46 299.34 225.78 301.9Z"
                fill={
                  {
                    "payload": 4290389097,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M148.44 394.01 221.82 298.85 233.55 291.8 255.75 332Z M236.74 289.93 260.06 329.46 256.49 331.56 254.97 330.68 232.43 292.47Z"
                fill={
                  {
                    "payload": 4293278847,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M243.85 258.6 263.9 224.85 256.27 210.2 256.05 117.05 320.8 225.22 285.23 282.93Z M256.07 123.33 256.27 208.76 255.4 210.2 251.28 210.21 251.17 164.87Z M282.07 286.87 241.9 263.26 244.5 258.98 284.58 282.54Z M292.52 271.09 319.49 227.36 315.39 243.53 296.33 274.44 293.46 272.67Z"
                fill={
                  {
                    "payload": 4293278847,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M243.85 258.6 285.23 282.93 279.32 293.07 237.45 269.15Z M235.96 271.66 238.53 267.37 263.98 282.65 279.85 292.17 277.28 296.46Z"
                fill={
                  {
                    "payload": 4290389097,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M256.27 210.2 242.35 233.22 256.05 117.05Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M320.8 225.22 390.6 342 393.32 346.6 364.95 395.23 307.07 296.93 303.95 291.73Z M300.59 284.63 311.43 241.85 320.19 227.65 304.21 290.7Z M355.37 388.81 313.32 317.39 316.9 315.29 318.43 316.21 364.18 393.91Z"
                fill={
                  {
                    "payload": 4285286885,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M320.8 225.22 303.95 291.73 292.08 271.81Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M226.59 260.2 317.63 314.86 364.95 395.23 255.75 332 220.03 271.44Z"
                fill={
                  {
                    "payload": 4283510978,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#191724",
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 56,
            "includeFontPadding": false,
            "letterSpacing": 0.56,
            "marginLeft": 2.24,
          }
        }
      >
        rrows
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_700Bold",
            "fontSize": 24,
            "letterSpacing": 0.5,
            "marginTop": 30,
          },
          {
            "color": "#8F76F0",
          },
        ]
      }
    >
      Level 
      1
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Fredoka_600SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.5,
            "marginTop": 6,
          },
          {
            "color": "#6D6988",
          },
        ]
      }
    >
      Normal
    </Text>
  </View>
  <View
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 34,
            "height": 68,
            "justifyContent": "center",
            "width": 250,
          },
          {
            "backgroundColor": "#6D4AEF",
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Fredoka_700Bold",
              "fontSize": 22,
              "letterSpacing": 1,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Play
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontFamily": "Fredoka_600SemiBold",
          "fontSize": 13,
          "position": "absolute",
        },
        {
          "bottom": 32,
          "color": "#6D6988",
        },
      ]
    }
  >
    3 puzzles solved
  </Text>
</View>
`;
